--- a/backend/env.example
+++ b/backend/env.example
@@ -58,6 +58,18 @@ MAIL_DEFAULT_SENDER=your-email@gmail.com
 SECURITY_PASSWORD_SALT=your-salt-here
 
 # ===========================================
+# CONFIGURACIÓN DE GOOGLE OAUTH
+# ===========================================
+
+# Google OAuth 2.0
+GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your-google-client-secret
+GOOGLE_REDIRECT_URI=http://localhost:3000/auth/google/callback
+
+# Para producción, cambiar a:
+# GOOGLE_REDIRECT_URI=https://yourdomain.com/auth/google/callback
+
+# ===========================================
 # CONFIGURACIÓN DE REDIS
 # ===========================================
 
