--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,12 @@ WTForms==3.1.0
 email-validator==2.1.0
 bcrypt==4.1.2
 
+# OAuth & Social Login
+authlib==1.2.1
+google-auth==2.23.4
+google-auth-oauthlib==1.1.0
+google-auth-httplib2==0.1.1
+
 # Database
 psycopg2-binary==2.9.9
 SQLAlchemy==2.0.23
