--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -32,8 +32,8 @@ requests==2.31.0
 urllib3==2.1.0
 
 # Data Processing
-pandas==2.1.4
-numpy==1.25.2
+pandas==2.0.3
+numpy==1.24.4
 python-dateutil==2.8.2
 
 # Environment & Configuration
@@ -61,3 +61,6 @@ Werkzeug==3.0.1
 pytz==2023.3
 holidays==0.37
 Pillow==10.1.0
+
+# Production Server
+gunicorn==21.2.0
