🔧 Configurar proyecto Supabase de desarrollo
PROYECTO DE DESARROLLO CREADO:
✅ URL: https://qsbvoyjqfrhaqncqtknv.supabase.co
✅ Anon Key: Configurada
✅ Password: Littletosti29.

ARCHIVOS CREADOS:
• configure_dev_via_api.py - Configuración via API REST
• migrate_prod_to_dev.py - Migración de datos
• setup_dev_project.py - Configuración automática
• test_dev_connection.py - Pruebas de conexión

CONFIGURACIÓN ACTUALIZADA:
• .env.development-production-like - Credenciales reales
• Puerto cambiado a 5432 (Session Pooler)

VERIFICACIÓN COMPLETADA:
✅ Entorno local: Bloqueado para despliegue
✅ Entorno producción: Listo para despliegue
✅ Scripts de gestión funcionando
✅ Sistema de seguridad operativo

PRÓXIMO PASO:
Configurar manualmente las tablas en Supabase dev

--- a/backend/.env.backup
+++ b/backend/.env.backup
@@ -1,93 +1,54 @@
 # ===========================================
-# CONFIGURACIÓN DE TEAM TIME MANAGEMENT
+# CONFIGURACIÓN DE DESARROLLO
 # ===========================================
+# Este archivo contiene la configuración para el entorno de desarrollo
+# que simula producción pero está completamente aislado
 
 # Configuración básica de Flask
-SECRET_KEY=your-secret-key-here
 FLASK_ENV=development
+SECRET_KEY=dev-secret-key-team-time-management-2024
+SECURITY_PASSWORD_SALT=dev-salt-team-time-management-2024
 
 # ===========================================
-# CONFIGURACIÓN DE BASE DE DATOS
+# CONFIGURACIÓN DE SUPABASE DESARROLLO
 # ===========================================
+# Proyecto Supabase separado para desarrollo
+# URL: https://[PROYECTO-DEV].supabase.co
+SUPABASE_DEV_URL=https://[PROYECTO-DEV].supabase.co
+SUPABASE_DEV_KEY=[ANON-KEY-DEV]
 
-# Configuración de Supabase PostgreSQL
-SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_KEY=your-supabase-anon-key
-SUPABASE_DB_PASSWORD=your-database-password
-SUPABASE_HOST=db.your-project.supabase.co
-SUPABASE_PORT=5432
-SUPABASE_DB_NAME=postgres
-SUPABASE_DB_USER=postgres.your-project
-
-# Configuración de base de datos local (fallback)
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/team_time_management
+# Configuración de base de datos PostgreSQL (Transaction Pooler)
+SUPABASE_DEV_DB_PASSWORD=[PASSWORD-DEV]
+SUPABASE_DEV_HOST=aws-0-eu-west-3.pooler.supabase.com
+SUPABASE_DEV_PORT=6543
+SUPABASE_DEV_DB=postgres
+SUPABASE_DEV_USER=postgres.[PROYECTO-DEV]
 
 # ===========================================
-# CONFIGURACIÓN DE EMAIL (SMTP)
+# CONFIGURACIÓN DE EMAIL (DESARROLLO)
 # ===========================================
-
-# Configuración SMTP - Gmail (recomendado)
+# Usar configuración de desarrollo para emails
 MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USE_TLS=true
-MAIL_USERNAME=your-email@gmail.com
-MAIL_PASSWORD=your-app-password
-MAIL_DEFAULT_SENDER=your-email@gmail.com
-
-# Configuración SMTP - SendGrid (alternativa)
-# MAIL_SERVER=smtp.sendgrid.net
-# MAIL_PORT=587
-# MAIL_USE_TLS=true
-# MAIL_USERNAME=apikey
-# MAIL_PASSWORD=your-sendgrid-api-key
-# MAIL_DEFAULT_SENDER=noreply@yourdomain.com
-
-# Configuración SMTP - Outlook (alternativa)
-# MAIL_SERVER=smtp-mail.outlook.com
-# MAIL_PORT=587
-# MAIL_USE_TLS=true
-# MAIL_USERNAME=your-email@outlook.com
-# MAIL_PASSWORD=your-password
-# MAIL_DEFAULT_SENDER=your-email@outlook.com
+MAIL_USERNAME=miguelchis@gmail.com
+MAIL_PASSWORD=jfhzwfgxcktneovy
 
 # ===========================================
-# CONFIGURACIÓN DE SEGURIDAD
+# CONFIGURACIÓN DE GOOGLE OAUTH (DESARROLLO)
 # ===========================================
-
-# Flask-Security
-SECURITY_PASSWORD_SALT=your-salt-here
-
-# ===========================================
-# CONFIGURACIÓN DE GOOGLE OAUTH
-# ===========================================
-
-# Google OAuth 2.0
-GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=your-google-client-secret
-GOOGLE_REDIRECT_URI=http://localhost:3000/auth/google/callback
-
-# Para producción, cambiar a:
-# GOOGLE_REDIRECT_URI=https://yourdomain.com/auth/google/callback
-
-# ===========================================
-# CONFIGURACIÓN DE REDIS
-# ===========================================
-
-# Redis para sesiones y caché
-REDIS_URL=redis://localhost:6379/0
+GOOGLE_CLIENT_ID=985900144787-kmg5juu0il36je358se4ljktnqmpsrip.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_REDIRECT_URI=http://localhost:5001/api/auth/google/callback
 
 # ===========================================
 # CONFIGURACIÓN DE LOGGING
 # ===========================================
-
-LOG_LEVEL=INFO
+LOG_LEVEL=DEBUG
 
 # ===========================================
-# INSTRUCCIONES DE CONFIGURACIÓN
+# NOTAS IMPORTANTES
 # ===========================================
-
-# 1. Copia este archivo como .env
-# 2. Configura las variables según tu entorno
-# 3. Para Gmail, usa una "App Password" en lugar de tu contraseña normal
-# 4. Para SendGrid, obtén tu API Key desde el dashboard
-# 5. Nunca subas el archivo .env al repositorio
+# 1. Este archivo es SOLO para desarrollo
+# 2. NUNCA hacer commit de este archivo con datos reales
+# 3. Reemplazar [PROYECTO-DEV], [ANON-KEY-DEV], [PASSWORD-DEV] con valores reales
+# 4. Este entorno está completamente separado de producción
