debug: Añadir endpoint temporal para verificar config SMTP

--- a/backend/.env.production
+++ b/backend/.env.production
@@ -17,13 +17,14 @@ SUPABASE_DB_PASSWORD=Littletosti29.
 SECRET_KEY=production-secret-key-change-me
 SECURITY_PASSWORD_SALT=production-salt-change-me
 
-# Email Configuration (Real SMTP)
+# Email Configuration (SendGrid - Real SMTP)
 MOCK_EMAIL_MODE=false
-MAIL_SERVER=smtp.gmail.com
+MAIL_SERVER=smtp.sendgrid.net
 MAIL_PORT=587
 MAIL_USE_TLS=true
-MAIL_USERNAME=your_email@gmail.com
-MAIL_PASSWORD=your_app_password
+MAIL_USERNAME=apikey
+MAIL_PASSWORD=your_sendgrid_api_key
+MAIL_DEFAULT_SENDER=noreply@teamtime.com
 
 # Google OAuth (Real Configuration)
 GOOGLE_CLIENT_ID=your_google_client_id
