--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,6 +58,8 @@
     "react-router-dom": "^6.30.1",
     "recharts": "^2.15.3",
     "sonner": "^2.0.3",
+    "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-virtual": "^3.11.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.7",
     "vaul": "^1.1.2",
